--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -4,41 +4,40 @@
   display: block;
   width: 100%;
 }
+
 .NavigationItem a {
   color: #8f5c2c;
   text-decoration: none;
-  padding: 16px 10px;
-  border-bottom: 4px solid transparent;
+  width: 100%;
   box-sizing: border-box;
   display: block;
-  width: 100%;
 }
 
 .NavigationItem a:hover,
 .NavigationItem a:active,
-.NavigationItem a:active {
-  color: 40a4c8;
+.NavigationItem a.active {
+  color: #40a4c8;
 }
 
 @media (min-width: 500px) {
   .NavigationItem {
     margin: 0;
-    width: auto;
     display: flex;
     height: 100%;
+    width: auto;
     align-items: center;
   }
+
   .NavigationItem a {
     color: white;
+    height: 100%;
     padding: 16px 10px;
     border-bottom: 4px solid transparent;
-    display: block;
-    height: 100%;
   }
 
   .NavigationItem a:hover,
   .NavigationItem a:active,
-  .NavigationItem a:active {
+  .NavigationItem a.active {
     background-color: #8f5c2c;
     border-bottom: 4px solid #40a4c8;
     color: white;
